개인 마이페이지 사진수정

--- a/src/main/resources/templates/user/recommendForm.mustache
+++ b/src/main/resources/templates/user/recommendForm.mustache
@@ -27,17 +27,17 @@
 	<div class="class col-8 h-auto d-flex border border-info">
 		<div class="bg-info col-2">
 			<div class="m-2"></div>
-			<a href="updateForm" class="w-100 btn btn-info">마이 페이지</a>
+			<a href="/user/updateForm" class="w-100 btn btn-info">마이 페이지</a>
 			<div class="m-2"></div>
-			<a href="resumeForm" class="w-100 btn btn-info">이력서 등록</a>
+			<a href="/user/resumeForm" class="w-100 btn btn-info">이력서 등록</a>
 			<div class="m-2"></div>
-			<a href="resumeManage" class="w-100 btn btn-info">이력서 관리</a>
+			<a href="/user/resumeManage" class="w-100 btn btn-info">이력서 관리</a>
 			<div class="m-2"></div>
-			<a href="applyList" class="w-100 btn btn-info">지원 내역</a>
+			<a href="/user/applyList" class="w-100 btn btn-info">지원 내역</a>
 			<div class="m-2"></div>
-			<a href="bookmarkForm" class="w-100 btn btn-info">북마크</a>
+			<a href="/user/bookmarkForm" class="w-100 btn btn-info">북마크</a>
 			<div class="m-2"></div>
-			<a href="recommendForm" class="w-100 btn btn-info">기업 추천</a>
+			<a href="/user/recommendForm" class="w-100 btn btn-info">기업 추천</a>
 
 		</div>
 		<div class="col-9 ms-3">
