--- a/src/main/resources/templates/user/resumeForm.mustache
+++ b/src/main/resources/templates/user/resumeForm.mustache
@@ -20,76 +20,38 @@
 
     <div class="col-9 ms-3">
       <h1 class="text-center mt-2">이력서 등록</h1>
-      <form
-        action="/user/resumeSave"
-        method="post"
-        enctype="multipart/form-data"
-      >
+      <form action="/user/resumeSave" method="post" enctype="multipart/form-data">
         <div class="d-flex">
           <div class="m-2 col-4 d-flex flex-column align-items-center">
-            <img
-              id="preview"
-              src="{{#sessionUser.photo}}{{
-                sessionUser.photo
-              }}{{/sessionUser.photo}}{{^sessionUser.photo}}../../../../../images/basic.jpg{{/sessionUser.photo}}"
-              class="img-fluid rounded-circle"
-              style="width: 150px; height: 150px"
-            />
+            <img id="preview"
+              src="{{#sessionUser.photo}}../../../../../images/{{sessionUser.photo}}{{/sessionUser.photo}}{{^sessionUser.photo}}../../../../../images/basic.jpg{{/sessionUser.photo}}"
+              class="img-fluid rounded-circle" style="width: 150px; height: 150px" />
             <div class="input-group mb-3 mt-3">
-              <input
-                type="file"
-                class="form-control"
-                placeholder="Enter pto"
-                name="pto"
-                onchange="changePic(event)"
-              />
+              <input type="file" class="form-control" placeholder="Enter pto" name="pto" onchange="changePic(event)" />
+              <input type="hidden" name="previousPhoto" value="{{ sessionUser.photo }}" />
             </div>
           </div>
 
           <div class="col-8 p-2">
             <div class="input-group mb-3">
-              <span class="input-group-text"
-                ><span class="ms-2 me-4">이름</span></span
-              >
-              <input
-                type="text"
-                class="form-control"
-                name="username"
-                value="{{ sessionUser.username }}"
-              />
+              <span class="input-group-text"><span class="ms-2 me-4">이름</span></span>
+              <input type="text" class="form-control" name="username" value="{{ sessionUser.username }}" />
             </div>
             <div class="input-group mb-3">
               <span class="input-group-text">전화번호</span>
-              <input
-                type="tel"
-                class="form-control"
-                name="tel"
-                value="{{ sessionUser.tel }}"
-              />
+              <input type="tel" class="form-control" name="tel" value="{{ sessionUser.tel }}" />
             </div>
             <div class="input-group mb-3">
-              <span class="input-group-text"
-                ><span class="ms-2 me-4">주소</span></span
-              >
-              <input
-                type="text"
-                class="form-control"
-                name="address"
-                value="{{#sessionUser.address}}{{
+              <span class="input-group-text"><span class="ms-2 me-4">주소</span></span>
+              <input type="text" class="form-control" name="address" value="{{#sessionUser.address}}{{
                   sessionUser.address
-                }}{{/sessionUser.address}}{{^sessionUser.address}}{{/sessionUser.address}}"
-              />
+                }}{{/sessionUser.address}}{{^sessionUser.address}}{{/sessionUser.address}}" />
             </div>
             <div class="input-group mb-3">
               <span class="input-group-text">생년월일</span>
-              <input
-                type="date"
-                class="form-control"
-                name="birth"
-                value="{{#sessionUser.birth}}{{
+              <input type="date" class="form-control" name="birth" value="{{#sessionUser.birth}}{{
                   sessionUser.birth
-                }}{{/sessionUser.birth}}{{^sessionUser.birth}}{{/sessionUser.birth}}"
-              />
+                }}{{/sessionUser.birth}}{{^sessionUser.birth}}{{/sessionUser.birth}}" />
             </div>
           </div>
         </div>
@@ -111,111 +73,48 @@
           <div class="d-flex flex-wrap">
             <div class="form-check d-inline-block ms-3 me-2">
               <label class="form-check-label">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  id="백엔드"
-                  name="position"
-                  value="백엔드"
-                />
-                백엔드</label
-              >
+                <input class="form-check-input" type="radio" id="백엔드" name="position" value="백엔드" />
+                백엔드</label>
             </div>
             <div class="form-check d-inline-block ms-3 me-2">
               <label class="form-check-label">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  id="프론트엔드"
-                  name="position"
-                  value="프론트엔드"
-                />
-                프론트엔드</label
-              >
+                <input class="form-check-input" type="radio" id="프론트엔드" name="position" value="프론트엔드" />
+                프론트엔드</label>
             </div>
             <div class="form-check d-inline-block ms-3 me-2">
               <label class="form-check-label">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  id="풀스택"
-                  name="position"
-                  value="풀스택"
-                />
-                풀스택</label
-              >
+                <input class="form-check-input" type="radio" id="풀스택" name="position" value="풀스택" />
+                풀스택</label>
             </div>
             <div class="form-check d-inline-block ms-3 me-2">
               <label class="form-check-label">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  id="안드로이드"
-                  name="position"
-                  value="안드로이드"
-                />
-                안드로이드</label
-              >
+                <input class="form-check-input" type="radio" id="안드로이드" name="position" value="안드로이드" />
+                안드로이드</label>
             </div>
             <div class="form-check d-inline-block ms-3 me-2">
               <label class="form-check-label">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  id="IOS"
-                  name="position"
-                  value="IOS"
-                />
-                IOS</label
-              >
+                <input class="form-check-input" type="radio" id="IOS" name="position" value="IOS" />
+                IOS</label>
             </div>
             <div class="form-check d-inline-block ms-3 me-2">
               <label class="form-check-label">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  id="임베디드"
-                  name="position"
-                  value="임베디드"
-                />
-                임베디드</label
-              >
+                <input class="form-check-input" type="radio" id="임베디드" name="position" value="임베디드" />
+                임베디드</label>
             </div>
             <div class="form-check d-inline-block ms-3 me-2">
               <label class="form-check-label">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  id="빅데이터"
-                  name="position"
-                  value="빅데이터"
-                />
-                빅데이터</label
-              >
+                <input class="form-check-input" type="radio" id="빅데이터" name="position" value="빅데이터" />
+                빅데이터</label>
             </div>
             <div class="form-check d-inline-block ms-3 me-2">
               <label class="form-check-label">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  id="서버"
-                  name="position"
-                  value="서버"
-                />
-                서버</label
-              >
+                <input class="form-check-input" type="radio" id="서버" name="position" value="서버" />
+                서버</label>
             </div>
             <div class="form-check d-inline-block ms-3 me-2">
               <label class="form-check-label">
-                <input
-                  class="form-check-input"
-                  type="radio"
-                  id="머신러닝"
-                  name="position"
-                  value="머신러닝"
-                />
-                머신러닝</label
-              >
+                <input class="form-check-input" type="radio" id="머신러닝" name="position" value="머신러닝" />
+                머신러닝</label>
             </div>
           </div>
         </div>
@@ -225,14 +124,8 @@
           <div class="d-flex flex-wrap">
             {{#skillList}}
             <div class="form-check d-inline-block ms-3 me-2">
-              <input
-                class="form-check-input"
-                type="checkbox"
-                id="skill{{ id }}"
-                value="{{ id }}"
-                name="skillList"
-                checked
-              />
+              <input class="form-check-input" type="checkbox" id="skill{{ id }}" value="{{ id }}" name="skillList"
+                checked />
               <label class="form-check-label">{{ skillname }}</label>
             </div>
             {{/skillList}}
@@ -241,11 +134,7 @@
 
         <div class="input-group ms-2 mb-3">
           <span class="input-group-text">자기소개서</span>
-          <textarea
-            class="form-control"
-            rows="5"
-            name="personalStatement"
-          ></textarea>
+          <textarea class="form-control" rows="5" name="personalStatement"></textarea>
         </div>
 
         <input type="checkbox" name="disclosure" value="true" /> 이력서 공개
@@ -256,12 +145,7 @@
         <!-- readonly속성은 읽기전용 input태그를 만든다 -->
         <!-- disabled ="ture"가 생략 된것-->
         <div>
-          <input
-            id="button"
-            class="btn btn-primary m-2 mb-3 w-100"
-            type="submit"
-            value="이력서 등록"
-          />
+          <input id="button" class="btn btn-primary m-2 mb-3 w-100" type="submit" value="이력서 등록" />
         </div>
       </form>
     </div>
