--- a/src/main/resources/templates/user/resumeUpdateForm.mustache
+++ b/src/main/resources/templates/user/resumeUpdateForm.mustache
@@ -7,17 +7,17 @@
   <div class="class col-8 h-auto d-flex border border-info">
     <div class="bg-info col-2">
       <div class="m-2"></div>
-      <a href="updateForm" class="w-100 btn btn-info">마이 페이지</a>
+      <a href="/user/updateForm" class="w-100 btn btn-info">마이 페이지</a>
       <div class="m-2"></div>
-      <a href="resumeForm" class="w-100 btn btn-info">이력서 등록</a>
+      <a href="/user/resumeForm" class="w-100 btn btn-info">이력서 등록</a>
       <div class="m-2"></div>
-      <a href="resumeManage" class="w-100 btn btn-info">이력서 관리</a>
+      <a href="/user/resumeManage" class="w-100 btn btn-info">이력서 관리</a>
       <div class="m-2"></div>
-      <a href="applyList" class="w-100 btn btn-info">지원내역</a>
+      <a href="/user/applyList" class="w-100 btn btn-info">지원내역</a>
       <div class="m-2"></div>
-      <a href="bookmarkForm" class="w-100 btn btn-info">북마크</a>
+      <a href="/user/bookmarkForm" class="w-100 btn btn-info">북마크</a>
       <div class="m-2"></div>
-      <a href="recommendForm" class="w-100 btn btn-info">기업추천</a>
+      <a href="/user/recommendForm" class="w-100 btn btn-info">기업추천</a>
       <div class="m-2"></div>
     </div>
     <div class="col-9 ms-3">
@@ -29,6 +29,7 @@
               style="width:150px; height:150px;" />
             <div class="input-group mb-3 mt-3">
               <input type="file" class="form-control" placeholder="Enter pto" name="pto" onchange="changePic(event)">
+              <input type="hidden" name="previousPhoto" value="{{ resume.user.photo }}" />
             </div>
           </div>
 
@@ -135,7 +136,8 @@
           <textarea class="form-control" rows="5" name="personalStatement">{{ resume.personalStatement }}</textarea>
         </div>
 
-        <input type="checkbox" name="cb" value="true" {{ #resume.disclosure }} checked {{ /resume.disclosure }} /> 이력서
+        <input type="checkbox" name="disclosure" value="true" {{ #resume.disclosure }} checked {{ /resume.disclosure
+          }} /> 이력서
         공개
         여부
         <br />
