--- a/src/main/resources/templates/user/updateForm.mustache
+++ b/src/main/resources/templates/user/updateForm.mustache
@@ -27,11 +27,12 @@
 				<div class="d-flex">
 					<div class="m-2 col-4 d-flex flex-column align-items-center">
 						<img id="preview"
-							src="{{#user.photo}}{{user.photo}}{{/user.photo}}{{^user.photo}}../../../../../images/basic.jpg{{/user.photo}}"
+							src="{{#user.photo}}../../../../../images/{{user.photo}}{{/user.photo}}{{^user.photo}}../../../../../images/basic.jpg{{/user.photo}}"
 							class="img-fluid rounded-circle" style="width:150px; height:150px;" />
 						<div class="input-group mb-3 mt-1">
 							<input type="file" class="form-control" placeholder="Enter pto" name="pto"
 								onchange="changePic(event)">
+							<input type="hidden" name="previousPhoto" value="{{ user.photo }}" />
 						</div>
 					</div>
 
