--- a/src/main/resources/templates/user/resumeManage.mustache
+++ b/src/main/resources/templates/user/resumeManage.mustache
@@ -28,7 +28,7 @@
 			<div class="m-2"></div>
 			<a href="/user/applyList" class="w-100 btn btn-info">지원내역</a>
 			<div class="m-2"></div>
-			<a href=/user/bookmarkForm" class="w-100 btn btn-info">북마크</a>
+			<a href="/user/bookmarkForm" class="w-100 btn btn-info">북마크</a>
 			<div class="m-2"></div>
 			<a href="/user/recommendForm" class="w-100 btn btn-info">기업추천</a>
 			<div class="m-2"></div>
