--- a/src/main/resources/templates/user/updateForm.mustache
+++ b/src/main/resources/templates/user/updateForm.mustache
@@ -27,36 +27,39 @@
 				<div class="d-flex">
 					<div class="m-2 col-4 d-flex flex-column align-items-center">
 						<img id="preview"
-							src="{{#user.photo}}../../../../../images/{{user.photo}}{{/user.photo}}{{^user.photo}}../../../../../images/basic.jpg{{/user.photo}}"
-							class="img-fluid rounded-circle" style="width:150px; height:150px;" />
+						     src="{{#user.photo}}../../../../../images/{{user.photo}}{{/user.photo}}{{^user.photo}}../../../../../images/basic.jpg{{/user.photo}}"
+						     class="img-fluid rounded-circle" style="width:150px; height:150px;"/>
 						<div class="input-group mb-3 mt-1">
 							<input type="file" class="form-control" placeholder="Enter pto" name="pto"
-								onchange="changePic(event)">
-							<input type="hidden" name="previousPhoto" value="{{ user.photo }}" />
+							       onchange="changePic(event)"
+							       required>
+							<!-- <input type="hidden" name="previousPhoto" value="{{ user.photo }}" /> -->
 						</div>
 					</div>
 
 					<div>
 						<div class="input-group col-6 mb-3">
 							<span class="input-group-text"><span class="ms-2 me-4">이름</span></span>
-							<input type="text" class="form-control" value="{{user.username}}" name="username">
+							<input type="text" class="form-control" value="{{user.username}}" name="username" required>
 						</div>
 						<div class=" input-group mb-3">
 							<span class="input-group-text">전화번호</span>
-							<input type="tel" class="form-control" value="{{user.tel}}" name="tel">
+							<input type="tel" class="form-control" value="{{user.tel}}" name="tel" required>
 						</div>
 						<div class="input-group mb-3">
 							<span class="input-group-text"><span class="ms-2 me-4">주소</span></span>
 							<input type="text" class="form-control"
-								value="{{#user.address}}{{user.address}}{{/user.address}}{{^user.address}}{{/user.address}}"
-								name="address">
+							       value="{{#user.address}}{{user.address}}{{/user.address}}{{^user.address}}{{/user.address}}"
+							       name="address"
+							       required>
 						</div>
 						<div class="input-group mb-3">
 							<span class="input-group-text">생년월일</span>
 
 							<input type="date" class="form-control"
-								value="{{#user.birth}}{{user.birth}}{{/user.birth}}{{^user.birth}}{{/user.birth}}"
-								name="birth">
+							       value="{{#user.birth}}{{user.birth}}{{/user.birth}}{{^user.birth}}{{/user.birth}}"
+							       name="birth"
+							       required>
 						</div>
 					</div>
 
