버튼 디자인 수정

--- a/src/main/resources/templates/comp/allOfferList.mustache
+++ b/src/main/resources/templates/comp/allOfferList.mustache
@@ -51,7 +51,7 @@
 							<div class="statementJS2"></div>
 							<form action="/comp/posting/offer/{{recommendId}}/cancel" method="post" class="ms-1">
 								<input type="hidden" name="redirectWhere" value="allOfferList">
-								<input class="btn btn-sm btn-warning p-0 ps-1 pe-1 statementButton" type="submit" value="제안 취소">
+								<input class="btn btn-sm btn-warning p-0 ps-1 pe-1 statementButton text-white" type="submit" value="제안 취소">
 							</form>
 						</td>
 					</tr>
