--- a/src/main/resources/templates/comp/main.mustache
+++ b/src/main/resources/templates/comp/main.mustache
@@ -50,7 +50,7 @@
 			-->
 
 			<div>
-				<input id="button" class="btn btn-primary w-100 mb-3" type="submit" value="기업 정보 수정" onclick="">
+				<input id="button" class="btn btn-primary w-100 mb-3 bg-info" type="submit" value="기업 정보 수정" onclick="">
 			</div>
 
 		</form>
