--- a/src/main/resources/templates/comp/saveForm.mustache
+++ b/src/main/resources/templates/comp/saveForm.mustache
@@ -300,7 +300,7 @@
 			
 
 			<div class="d-flex">
-				<input id="button" class="mb-3 w-100 btn btn-success" type="submit" value="공고 등록하기" onclick="">
+				<input id="button" class="mb-3 w-100 btn btn-success bg-info" type="submit" value="공고 등록하기" onclick="">
 			</div>
 
 		</form>
