--- a/src/main/resources/templates/user/applyList.mustache
+++ b/src/main/resources/templates/user/applyList.mustache
@@ -106,9 +106,9 @@
 			if (statement === '대기') {
 				cell.style.color = 'orange'; // 대기 상태일 때 글자 색상을 노랑으로 변경
 			} else if (statement === '합격') {
-				cell.style.color = 'red'; // 합격 상태일 때 글자 색상을 빨강으로 변경
+				cell.style.color = 'green'; // 합격 상태일 때 글자 색상을 빨강으로 변경
 			} else if (statement === '불합') {
-				cell.style.color = 'blue'; // 불합격 상태일 때 글자 색상을 파랑으로 변경
+				cell.style.color = 'red'; // 불합격 상태일 때 글자 색상을 파랑으로 변경
 			}
 		});
 	});
