--- a/src/main/resources/templates/user/updateForm.mustache
+++ b/src/main/resources/templates/user/updateForm.mustache
@@ -65,7 +65,7 @@
 
 				</div>
 				<div>
-					<input id="button" class=" btn btn-primary m-2 mb-3 w-100" type="submit" value="수정">
+					<input id="button" class=" btn btn-primary m-2 mb-3 w-100 bg-info" type="submit" value="수정">
 				</div>
 			</form>
 		</div>
