--- a/src/main/resources/templates/user/loginForm.mustache
+++ b/src/main/resources/templates/user/loginForm.mustache
@@ -16,7 +16,7 @@
 		<form action="/login" method="post" onsubmit="changeLoginLinksAndButton()">
 			<div class="d-flex form-group mt-2 mb-2">
 				<input type="email" name="email" class="form-control" placeholder="아이디(이메일)" id="email"
-					value="love@nate.com">
+					value="@nate.com">
 			</div>
 
 			<div class="mb-2">
