--- a/src/main/resources/templates/user/recommendForm.mustache
+++ b/src/main/resources/templates/user/recommendForm.mustache
@@ -138,7 +138,7 @@
 			</form>
 
 			<div class="m-2 ms-2 me-2">
-				<div class="btn btn-success w-100" onclick="searchAll()">검색하기</div>
+				<div class="btn btn-success w-100 bg-info" onclick="searchAll()">검색하기</div>
 			</div>
 
 			{{#compInfoList}}
@@ -147,7 +147,7 @@
 					<div class="m-auto">
 						<span class="compname">{{this.compname}}</span>
 						<div data-id="{{id}}" class="posting-title">{{title}}</div>
-						<span class="badge bg-danger">{{position}}</span>
+						<span class="badge bg-primary">{{position}}</span>
 						{{#postingSkills}}
 						<span class="badge bg-secondary me-1">{{skill.skillname}}</span>
 						{{/postingSkills}}
