--- a/src/main/resources/templates/user/resumeForm.mustache
+++ b/src/main/resources/templates/user/resumeForm.mustache
@@ -145,7 +145,7 @@
         <!-- readonly속성은 읽기전용 input태그를 만든다 -->
         <!-- disabled ="ture"가 생략 된것-->
         <div>
-          <input id="button" class="btn btn-primary m-2 mb-3 w-100" type="submit" value="이력서 등록" />
+          <input id="button" class="btn btn-primary m-2 mb-3 w-100 bg-info" type="submit" value="이력서 등록" />
         </div>
       </form>
     </div>
