--- a/src/main/resources/templates/user/resumeManage.mustache
+++ b/src/main/resources/templates/user/resumeManage.mustache
@@ -39,28 +39,29 @@
 			</div>
 			{{#resumes}}
 
-			<div class="d-flex border border-info m-3 p-2">
-				<div class="d-flex justify-content-between w-100">
-					<span type="text" class="w-50 title-link" data-href="/user/resume/{{id}}">{{title}}</span>
-					<div class="d-flex align-items-center">
-						<div class="d-inline-block me-2">
-							<a href="/user/resumeUpdateForm/{{id}}" class="btn btn-info btn-sm">수정</a>
+				<div class="d-flex border border-info m-3 p-2">
+					<div class="d-flex justify-content-between w-100">
+						<span type="text" class="w-50 title-link" data-href="/user/resume/{{id}}">{{title}}</span>
+						<div class="d-flex align-items-center">
+							<div class="d-inline-block me-2">
+								<a href="/user/resumeUpdateForm/{{id}}" class="btn btn-info btn-sm text-white">수정</a>
+							</div>
+							<div class="d-inline-block me-2">
+								<a href="/user/resume/{{id}}/offerList" class="btn btn-warning btn-sm text-white">입사 제안 보기</a>
+							</div>
+							<form action="/resume/delete/{{id}}" method="post" class="d-inline-block">
+								<button class="btn btn-danger btn-sm" type="submit">삭제</button>
+							</form>
 						</div>
-						<div class="d-inline-block me-2">
-							<a href="/user/resume/{{id}}/offerList" class="btn btn-warning btn-sm">입사 제안 보기</a>
-						</div>
-						<form action="/resume/delete/{{id}}" method="post" class="d-inline-block">
-							<button class="btn btn-danger btn-sm" type="submit">삭제</button>
-						</form>
 					</div>
 				</div>
-			</div>
 
 			{{/resumes}}
 
 
 		</div>
 	</div>
+</div>
 
 	<script>
 		document.addEventListener('DOMContentLoaded', function () {
@@ -76,3 +77,5 @@
 			});
 		});
 	</script>
+
+{{> layout/footer}}
