--- a/src/main/resources/templates/comp/compDetail.mustache
+++ b/src/main/resources/templates/comp/compDetail.mustache
@@ -2,9 +2,9 @@
 
 
 	<!-- 18번 -->
-		<div class="container border border-info">
+		<div class="col-auto container border border-info">
 
-			<div class="col-auto container">
+			<div class="">
 				<h1 class="text-center mt-2">기업 페이지</h1>
 
 				<div class="d-flex">
@@ -12,7 +12,7 @@
 						<img src="../../../images/{{#company.photo}}{{company.photo}}{{/company.photo}}" class=""/>
 					</div>
 
-					<div class="col-8 p-2">
+					<div class="col-8 ps-3">
 							<div class="input-group mb-3">
 								<span class="input-group-text">회사명</span>
 								<input type="text" class="form-control" value="{{#company.compname}}{{company.compname}}{{/company.compname}}" disabled>
