--- a/src/main/resources/templates/comp/resumeDetailOnly.mustache
+++ b/src/main/resources/templates/comp/resumeDetailOnly.mustache
@@ -128,7 +128,7 @@
 					<img src="../../../images/{{resume.user.photo}}" class="rounded-circle"/>
 				</div>
 
-				<div class="col-8 p-2">
+				<div class="col-8 ps-2">
 						<div class="input-group mb-3">
 							<span class="input-group-text">이름</span>
 							<input type="text" class="form-control" value="{{#resume.user.username}}{{resume.user.username}}{{/resume.user.username}}" disabled>
@@ -149,7 +149,7 @@
 
 			</div>
 
-			<div class="input-group mb-3">
+			<div class="input-group mb-3 mt-2">
 				<span class="input-group-text">학력사항</span>
 				<input type="text" class="form-control" value="{{resume.grade}}" disabled>
 			</div>
