--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -70,7 +70,7 @@
 			<!-- form="selectform"랑 id 같게 해야 받아옴  -->
 			<div class="d-flex justify-content-around ps-4 pe-4">
 				<div class="order-2 m-2 border border-info col-4">
-					<h4 class="mt-2 text-center">기술별</h4>
+					<h4 class="mt-2 text-center mb-0 ">기술별</h4>
 
 					<div class="d-flex justify-content-between">
 						<div class="form-check d-inline-block ms-3 me-2 align-self-end">
@@ -87,7 +87,7 @@
 							>
 						</div>
 						<div
-							class="btn btn-primary me-3 m-1 btn-sm"
+							class="btn btn-primary me-3 m-1 mt-0 btn-sm"
 							onclick="searchOnlySkill()"
 						>
 							기술만 검색
@@ -115,7 +115,7 @@
 				</div>
 
 				<div class="order-1 m-2 border border-info col-4">
-					<h4 class="mt-2 text-center">지역별</h4>
+					<h4 class="mt-2 text-center mb-0">지역별</h4>
 
 					<div class="d-flex justify-content-between">
 						<div class="form-check d-inline-block ms-3 me-2 align-self-end">
@@ -132,7 +132,7 @@
 							>
 						</div>
 						<div
-							class="btn btn-primary me-3 m-1 btn-sm"
+							class="btn btn-primary me-3 m-1 mt-0 btn-sm"
 							onclick="searchOnlyRegion()"
 						>
 							지역만 검색
@@ -172,7 +172,7 @@
 				</div>
 
 				<div class="order-3 m-2 border border-info col-4">
-					<h4 class="mt-2 text-center">직무별</h4>
+					<h4 class="mt-2 text-center mb-0">직무별</h4>
 
 					<div class="d-flex justify-content-between">
 						<div class="form-check d-inline-block ms-3 me-2 align-self-end">
@@ -188,7 +188,7 @@
 							>
 						</div>
 						<div
-							class="btn btn-primary me-3 m-1 btn-sm"
+							class="btn btn-primary me-3 m-1 mt-0 btn-sm"
 							onclick="searchOnlyPosition()"
 						>
 							직무만 검색
