--- a/src/main/resources/templates/comp/resumeDetail.mustache
+++ b/src/main/resources/templates/comp/resumeDetail.mustache
@@ -15,7 +15,7 @@
       />
     </div>
 
-    <div class="col-8 p-2">
+    <div class="col-8 ps-3">
       <div class="input-group mb-3">
         <span class="input-group-text">이름</span>
         <input
@@ -57,7 +57,7 @@
     </div>
   </div>
 
-  <div class="input-group mb-3">
+  <div class="input-group mb-3 mt-2">
     <span class="input-group-text">학력사항</span>
     <input
       type="text"
