--- a/src/main/resources/templates/layout/comp2header.mustache
+++ b/src/main/resources/templates/layout/comp2header.mustache
@@ -5,7 +5,7 @@
 	<div class="h-auto col-xl-6 col-lg-8 col-md-10 col-sm-12 d-flex border border-info">
 		<div class="bg-info col-auto">
 			<div class="m-2"></div>
-			<a href="/comp/main" class="w-100 btn btn-info">마이 페이지</a>
+			<a href="/comp/main" class="w-100 btn btn-info">기업 페이지</a>
 			<div class="m-2"></div>
 			<a href="/comp/posting/saveForm" class="w-100 btn btn-info">구인공고 등록</a>
 			<div class="m-2"></div>
