--- a/src/main/resources/templates/comp/postingList.mustache
+++ b/src/main/resources/templates/comp/postingList.mustache
@@ -22,7 +22,7 @@
 					<div class="">
 						<div class="fw-bold">{{title}}</div>
 						<span class="badge" style="background-color: #2f3a7d">{{position}}</span>
-						<span class="expiryDate badge" style="background-color: darkred">{{#expiryDate}}{{expiryDate}}{{/expiryDate}}</span>
+						<span class="expiryDate badge" style="background-color: red">{{#expiryDate}}{{expiryDate}}{{/expiryDate}}</span>
 					</div>
 					<div class="">
 						{{#postingSkill}}<span class="badge me-1" style="background-color: #7F00FF">{{skill.skillname}}</span>{{/postingSkill}}
