--- a/src/main/resources/templates/comp/resumeList.mustache
+++ b/src/main/resources/templates/comp/resumeList.mustache
@@ -16,16 +16,16 @@
 			<a href="javascript:void(0);" class="btn btn-info m-2" onclick="openNewWindow('/comp/posting/newWindow/{{posting.id}}')">
 				<div class="">
 					<div class="fw-bold">{{posting.title}}</div>
-					<span class="badge bg-secondary">{{posting.position}}</span>
-					<span class="expiryDate badge bg-black">{{#posting.expiryDate}}{{posting.expiryDate}}{{/posting.expiryDate}}</span>
+					<span class="badge" style="background-color: #2f3a7d">{{posting.position}}</span>
+					<span class="expiryDate badge" style="background-color: red">{{#posting.expiryDate}}{{posting.expiryDate}}{{/posting.expiryDate}}</span>
 				</div>
 				<div class="">
-					{{#posting.postingSkill}}<span class="badge bg-primary me-1">{{skill.skillname}}</span>{{/posting.postingSkill}}
+					{{#posting.postingSkill}}<span class="badge me-1" style="background-color: #7F00FF">{{skill.skillname}}</span>{{/posting.postingSkill}}
 				</div>
 				<div>
-					{{#posting.career}}<span class="badge bg-success">{{posting.career}}</span>{{/posting.career}}
-					{{#posting.education}}<span class="badge bg-success">{{posting.education}}</span>{{/posting.education}}
-					<span class="badge bg-success">{{posting.region}}</span>
+					{{#posting.career}}<span class="badge" style="background-color: #f9b233">{{posting.career}}</span>{{/posting.career}}
+					{{#posting.education}}<span class="badge" style="background-color: #f27d0c">{{posting.education}}</span>{{/posting.education}}
+					<span class="badge" style="background-color: #f95959">{{posting.region}}</span>
 				</div>
 			</a>
 			
