--- a/src/main/resources/templates/user/loginForm.mustache
+++ b/src/main/resources/templates/user/loginForm.mustache
@@ -54,7 +54,7 @@
 				loginLink.textContent = "마이페이지";
 				loginLink.href = "/user/updateForm";
 			} else if (CompSession === "2") {
-				loginLink.textContent = "기업정보보기";
+				loginLink.textContent = "기업페이지";
 				loginLink.href = "/comp/main";
 			}
 		} else {
