--- a/src/main/resources/templates/user/recommendForm.mustache
+++ b/src/main/resources/templates/user/recommendForm.mustache
@@ -147,9 +147,9 @@
 					<div class="m-auto">
 						<span class="compname">{{this.compname}}</span>
 						<div data-id="{{id}}" class="posting-title">{{title}}</div>
-						<span class="badge bg-primary">{{position}}</span>
+						<span class="badge" style="background-color: #2f3a7d">{{position}}</span>
 						{{#postingSkills}}
-						<span class="badge bg-secondary me-1">{{skill.skillname}}</span>
+						<span class="badge me-1" style="background-color: #7F00FF">{{skill.skillname}}</span>
 						{{/postingSkills}}
 
 					</div>
